// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProjectView renders a card with a form ready to be submitted to create a new project 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        className="css-kglogr"
      >
        <div
          className="errorgroup"
        >
          <div
            className="css-u1f566"
          />
        </div>
        <div
          className="field"
        >
          <div
            className="css-ie0fxa"
          >
            <div
              className="css-f17nry"
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              className="css-f17nry"
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value="sirius"
            />
            <div
              className="errorgroup"
            >
              <div
                className="css-u1f566"
              />
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            className="css-12hj4ej"
          >
            <button
              className="button button--primary"
            >
              <div
                className="css-1trk9rv"
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewProjectView renders a card with a unsubmittable form to create a new project 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        className="css-kglogr"
      >
        <div
          className="errorgroup"
        >
          <div
            className="css-u1f566"
          />
        </div>
        <div
          className="field"
        >
          <div
            className="css-ie0fxa"
          >
            <div
              className="css-f17nry"
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              className="css-f17nry"
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value=""
            />
            <div
              className="errorgroup"
            >
              <div
                className="css-u1f566"
              />
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            className="css-12hj4ej"
          >
            <button
              className="button button--primary"
            >
              <div
                className="css-1trk9rv"
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewProjectView renders a redirect component once the project has been created 1`] = `null`;

exports[`NewProjectView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    className="css-1nc71gt"
  >
    <div
      className="errorcard-container"
    >
      <div
        className="css-kglogr"
      >
        <h1
          className="title-l"
        >
          The new project page is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`NewProjectView renders errors message 1`] = `
<div
  className="newprojectview"
>
  <div
    className="card newprojectcard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text l semibold hideoverflow"
      >
        New Project
      </div>
    </div>
    <div
      className="card-divider"
    />
    <form
      className="form"
      onSubmit={[Function]}
    >
      <div
        className="css-kglogr"
      >
        <div
          className="errorgroup"
        >
          <div
            className="css-u1f566"
          >
            <div
              className="error"
            >
              <div
                className="css-8ikfdx"
              >
                Project already exists
              </div>
            </div>
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="css-ie0fxa"
          >
            <div
              className="css-f17nry"
            >
              <label
                className="label body-l"
                htmlFor="name"
              >
                Name
              </label>
            </div>
            <div
              className="css-f17nry"
            >
              <p
                className="description caption-m"
              >
                The name of the project can only contain letters and numbers separated by dots, dashes or underscores.
              </p>
            </div>
            <input
              className="textfield fielderror"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="Enter the name"
              type="text"
              value=":\\\\/."
            />
            <div
              className="errorgroup"
            >
              <div
                className="css-u1f566"
              >
                <div
                  className="error"
                >
                  <div
                    className="css-8ikfdx"
                  >
                    Invalid name
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="actiongroup"
        >
          <div
            className="css-12hj4ej"
          >
            <button
              className="button button--primary"
            >
              <div
                className="css-1trk9rv"
              >
                <div
                  className="button-container"
                >
                  <div
                    className="loading button-loadingindicator"
                  >
                    <div />
                    <div />
                    <div />
                  </div>
                  <div
                    className="text s semibold button-label"
                  >
                    Create Project
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
